k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pythonapp-ingress
  namespace: pythonapp
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: pythonapp.example.com    # change to your host or use hostless for testing
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pythonapp-svc
                port:
                  number: 80
